--- a/index.html
+++ b/index.html
@@ -104,15 +104,25 @@
 <div style="width: 100%; height: 50%" id="vis">
     <div style="height: 100%">
         <!-- Create a div where the graph will take place -->
-        <div style="width: 50%; height: 100px; float: left;" id="industry_number"></div>
-        <div style="margin-left: 50%; height: 100px;" id="sector_number"></div>
+
+        <div style="width: 50%; height: 100px; float: left;" id="industry_number">
+            <p>Businesses by Sector</p>
+        </div>
+        <div style="margin-left: 50%; height: 100px;" id="sector_number">
+            <p>Businesses by Industry</p>
+        </div>
     </div>
     <div style="height: 100%">
         <!-- Create a div where the graph will take place -->
-        <div style="width: 50%; height: 100px; float: left;" id="business_type_number"></div>
-        <div style="margin-left: 50%; height: 100px;" id="business_status"></div>
+        <div style="width: 50%; height: 100px; float: left;" id="business_type_number">
+            <p>Businesses by Ownership Type</p>
+        </div>
+        <div style="margin-left: 50%; height: 100px;" id="business_status">
+            <p>Revenue vs Employee Number</p>
+        </div>
     </div>
-    <div style="height: 100%" id="CSVTable"></div>
+    <div style="height: 100%" id="CSVTable">
+        <a href="https://raw.githubusercontent.com/xinyizou/WinHacks/main/final_results_geo%20copy.json">raw data</a>    </div>
 <!--    <div id="test">-->
 <!--        <table id="table" style="width:100%">-->
 <!--            tr>&ndash;&gt;-->
